--- a/css/queries.css
+++ b/css/queries.css
@@ -1,72 +1,104 @@
 @media(max-width: 540px) {
+
     /* designs section */
+    .design-title h1 {
+        font-size: 2.5rem;
+    }
+
     .designs {
         justify-content: center;
     }
+
     .design-1 {
         width: 100%;
     }
+
     .design-1 .design-img {
         margin-bottom: 3em;
         display: flex;
         justify-content: end;
     }
+
     .design-3 {
         flex-direction: column;
     }
+
     /* about-section */
     .about-section {
         flex-direction: column;
     }
+
     .consultant-img {
         margin-bottom: 2.5em;
         max-width: 100%;
     }
+
+    .about-head h2 {
+        font-size: 1.8rem;
+    }
+
     /* booking section */
     .booking-section {
         padding: 2em;
     }
-    .book-body {
+
+    .booking-head h3 {
+        font-size: 1.7rem;
+    }
+
+    .booking-body {
         flex-direction: column;
     }
+
     .book-text {
         width: 100%;
     }
+
     .book-button {
         width: 100%;
         margin-top: 2em;
     }
 }
+
 @media(min-width: 541px) and (max-width: 850px) {
+
     /* designs section */
     .designs {
         justify-content: center;
     }
+
     .design-1 {
         width: 60%;
     }
+
     .design-1 .design-img {
         margin-bottom: 3em;
         display: flex;
         justify-content: end;
     }
+
     .design-3 {
         flex-direction: column;
     }
+
     /* about-section */
     .about-section {
         flex-direction: column;
     }
+
     .consultant-img {
         margin-bottom: 2.5em;
     }
+
     /* booking section */
-    .book-body {
+    .booking-body {
         flex-direction: column;
     }
+
     .book-text {
         width: 100%;
     }
+
     .book-button {
         width: 100%;
         margin-top: 2em;
@@ -74,12 +106,14 @@
 }
 
 @media(min-width: 851px) and (max-width: 1200px) {
+
     /* designs section */
     .design-3 {
         flex-direction: row-reverse;
         width: 100%;
         justify-content: space-between;
     }
+
     /* booking section */
     .book-button {
         width: 35%;
